--- a/app/src/main/res/navigation/catalog_graph.xml
+++ b/app/src/main/res/navigation/catalog_graph.xml
@@ -27,5 +27,10 @@
         android:id="@+id/productDetailsFragment4"
         android:name="com.example.clothesshop.ui.product.ProductDetailsFragment"
         android:label="fragment_product_details"
-        tools:layout="@layout/fragment_product_details" />
+        tools:layout="@layout/fragment_product_details" >
+        <argument
+            android:name="id"
+            app:argType="string"
+            android:defaultValue="null" />
+    </fragment>
 </navigation>
