--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="green">#388e3c</color>
+    <color name="green_light">#6abf69</color>
+    <color name="green_dark">#00600f</color>
+    <color name="blue">#0288d1</color>
+    <color name="blue_light">#5eb8ff</color>
+    <color name="blue_dark">#005b9f</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green">#388E3C</color>
-
     <color name="colorGray">#D0D0D0</color>
+
 </resources>
